--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,15 @@
 /dist
 /node_modules
 /build
-.yarn
+
+# Yarn Zero-Installs: https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # Logs
 logs
